[gd_scene load_steps=3 format=2]

[ext_resource path="res://addons/openvr_overlay/interaction/overlay_interaction.gd" type="Script" id=1]
[ext_resource path="res://addons/openvr_overlay/interaction/OverlayActivator.tscn" type="PackedScene" id=6]

[node name="OverlayInteraction" type="Node"]
script = ExtResource( 1 )

[node name="VR" type="ARVROrigin" parent="."]

[node name="left" type="ARVRController" parent="VR"]

[node name="OverlayActivator" parent="VR/left" instance=ExtResource( 6 )]

[node name="right" type="ARVRController" parent="VR"]
controller_id = 2

[node name="OverlayActivator" parent="VR/right" instance=ExtResource( 6 )]

[node name="head" type="ARVRCamera" parent="VR"]
visible = false

[connection signal="button_pressed" from="VR/left" to="." method="_on_LeftHand_button_pressed"]
[connection signal="button_release" from="VR/left" to="." method="_on_LeftHand_button_release"]
[connection signal="button_pressed" from="VR/right" to="." method="_on_RightHand_button_pressed"]
[connection signal="button_release" from="VR/right" to="." method="_on_RightHand_button_release"]
